--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Itecos</title>
-	<link rel="stylesheet" href="normalize.css">
 	<link rel="stylesheet" href="itecos.css">
+	<link rel="stylesheet" href="normalize.css">
+
 </head>
 <body>
 	<header>
 		<article id="boxmenu">
 	<ul>
-		<li class="menu"><a href="">Inicio</a></li>
-		<li class="menu"><a href="">Nosotros</a></li>
-		<li class="menu"><a href="">Contáctanos</a></li>
-		<li class="menu"><a href="">Donde estamos</a></li>
+		<li class="menu"><a href="#">Inicio</a></li>
+		<li class="menu"><a href="#">Nosotros</a></li>
+		<li class="menu"><a href="#">Contáctanos</a></li>
+		<li class="menu"><a href="#">Donde estamos</a></li>
 
 	</ul>
 			
