--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 	</ul>
 			
 		</article>
-
+		<figure id = "fheader">
+			<img src="header.jpg" alt="" id="itecosheader">
+		</figure>
 
 	</header>
 </body>
