--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			
 		</article>
 		<figure id = "fheader">
-			<img src="header.jpg" alt="" id="itecosheader">
+			<img src="header2.jpg" alt="" id="itecosheader">
 		</figure>
 
 	</header>
